Language packs added

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -17,6 +17,10 @@
     <!--JS Polyfill-->
     <script src="Code/StringExtensions.js"></script>
     <!-- Ours -->
+    <!-- Language packs-->
+    <script src="Code/LangagePacks/Bulgarian.js"></script>
+    <script src="Code/LangagePacks/English.js"></script>
+    <!-- /Language packs-->
     <script src="Code/Utilities.js"></script>
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
