Character and something looking like an enviroment added

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -18,12 +18,15 @@
     <script src="Code/StringExtensions.js"></script>
     <!-- Ours -->
     <!-- Language packs-->
-    <script src="Code/LangagePacks/Bulgarian.js"></script>
-    <script src="Code/LangagePacks/English.js"></script>
+    <script src="Code/LanguagePacks/Bulgarian.js"></script>
+    <script src="Code/LanguagePacks/English.js"></script>
     <!-- /Language packs-->
     <script src="Code/Utilities.js"></script>
+    <script src="Code/GeometryUtils.js"></script>
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
+
+    <script src="Code/Character.js"></script>
 
     <script src="Code/application.js"></script>
     <script src="Code/main.js"></script>
