Added an offline tool.
It improves content management and stuff. Several minor changes.

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -21,6 +21,11 @@
     <script src="Code/LanguagePacks/Bulgarian.js"></script>
     <script src="Code/LanguagePacks/English.js"></script>
     <!-- /Language packs-->
+
+    <!-- Content -->
+    <script src="Code/Managers/ContentLibrary.js"></script>
+    <script src="Code/Managers/ContentLoader.js"></script>
+    <!-- /Content -->
     <script src="Code/Utilities.js"></script>
     <script src="Code/GeometryUtils.js"></script>
     <script src="Code/Managers/MouseData.js"></script>
