Animated engineer added. NDC. Stats and resizing.

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -13,6 +13,10 @@
 
     <!-- External libs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
+    <script src="Scripts/implementations/stats.min.js"></script>
+    <!-- Fonts -->
+    <script src="helvetiker_regular.typeface.js"></script>
+    <!-- /Fonts-->
 
     <!--JS Polyfill-->
     <script src="Code/StringExtensions.js"></script>
@@ -28,6 +32,7 @@
     <!-- /Content -->
 
     <script src="Code/CameraControllers/ThirdPersonLockCameraController.js"></script>
+    <script src="Code/CameraControllers/SmartCameraController.js"></script>
 
     <script src="Code/Utilities.js"></script>
     <script src="Code/GeometryUtils.js"></script>
@@ -35,7 +40,7 @@
     <script src="Code/Managers/InputManager.js"></script>
 
     <script src="Code/Character.js"></script>
-
+    <script src="Code/LaserOfDeath.js"></script>
     <script src="Code/application.js"></script>
     <script src="Code/main.js"></script>
 </body>
