--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -38,6 +38,7 @@
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
 
+    <script src="Code/Terrain.js"></script>
     <script src="Code/Character.js"></script>
     <script src="Code/LaserOfDeath.js"></script>
     <script src="Code/application.js"></script>
