--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r61/three.min.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
     <!-- Fonts -->
-    <script src="Content/Fonts/helvetiker_regular.typeface.js"></script>
+    <script src="Content/Fonts/Helvetiker.js"></script>
     <!-- /Fonts-->
 
     <!--JS Polyfill-->
