--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -38,9 +38,15 @@
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
 
-    <script src="Code/Terrain.js"></script>
-    <script src="Code/Character.js"></script>
-    <script src="Code/LaserOfDeath.js"></script>
+    <script src="Code/Scene/Scene.js"></script>
+    <script src="Code/Objectives.js"></script>
+    <script src="Code/Quest.js"></script>
+    <script src="Code/FrameInfo.js"></script>
+    <script src="Code/Scene/Terrain.js"></script>
+    <script src="Code/Scene/DynamicObject.js"></script>
+    <script src="Code/Scene/Character.js"></script>
+    <script src="Code/Scene/Ammo.js"></script>
+    <script src="Code/Scene/LaserOfDeath.js"></script>
     <script src="Code/application.js"></script>
     <script src="Code/main.js"></script>
 </body>
