minor changes. hero is part of the scenenow.

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -43,6 +43,7 @@
     <script src="Code/Quest.js"></script>
     <script src="Code/FrameInfo.js"></script>
     <script src="Code/Scene/Terrain.js"></script>
+    <script src="Code/Scene/Environment.js"></script>
     <script src="Code/Scene/DynamicObject.js"></script>
     <script src="Code/Scene/Character.js"></script>
     <script src="Code/Scene/Ammo.js"></script>
