--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -14,7 +14,8 @@
     <div id="crosshair"></div>
 
     <!-- External libs -->
-    <script src="http://threejs.org/build/three.min.js"></script>
+    <script src="Scripts/implementations/three.min.js"></script>
+    <script src="Scripts/implementations/cannon.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
     <!-- Fonts -->
     <script src="Content/Fonts/Helvetiker.js"></script>
@@ -39,6 +40,7 @@
     <script src="Code/GeometryUtils.js"></script>
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
+    <script src="Code/Managers/PhysicsManager.js"></script>
 
     <script src="Code/Scene/Scene.js"></script>
     <script src="Code/Objectives.js"></script>
