Physics works correctly. More settings added to the scene file

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -15,7 +15,8 @@
 
     <!-- External libs -->
     <script src="Scripts/implementations/three.min.js"></script>
-    <script src="Scripts/implementations/cannon.js"></script>
+    <script src="Scripts/implementations/jquery.documentReady.js"></script>
+    <script src="Scripts/implementations/cannon.min.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
     <!-- Fonts -->
     <script src="Content/Fonts/Helvetiker.js"></script>
