Beggining of a state machine. Further physics improvements. Jumping is now ALIVE

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -34,6 +34,7 @@
 
     <script src="Code/Utilities.js"></script>
     <script src="Code/GeometryUtils.js"></script>
+    <script src="Code/StateMachine.js"></script>
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
     <script src="Code/Managers/PhysicsManager.js"></script>
