Dont really remember :(

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -32,9 +32,12 @@
 
     <script src="Code/CameraControllers/SkyrimCameraController.js"></script>
 
+    <script src="Code/StateMachine/State.js"></script>
+    <script src="Code/StateMachine/StateMachine.js"></script>
+    <script src="Code/StateMachine/StateMachineUtils.js"></script>
+
     <script src="Code/Utilities.js"></script>
     <script src="Code/GeometryUtils.js"></script>
-    <script src="Code/StateMachine.js"></script>
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
     <script src="Code/Managers/PhysicsManager.js"></script>
