A* implementation. Some basic AI. Refactored state machines. Physics mem leak fix

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -26,12 +26,23 @@
     <!--JS Polyfill-->
     <script src="Code/StringExtensions.js"></script>
     <!-- Ours -->
+
+    <!-- Constants -->
+    <script src="Code/Constants.js"></script>
+
     <!-- Language packs-->
     <script src="Code/LanguagePacks/Bulgarian.js"></script>
     <script src="Code/LanguagePacks/English.js"></script>
     <!-- /Language packs-->
 
+    <!-- Algorithms-->
+    <script src="Code/Algorithms/GraphDefinitions.js"></script>
+    <script src="Code/Algorithms/AStar.js"></script>
+    <!-- /Algorithms-->
+
     <script src="Code/CharacterControllers/SkyrimCharacterController.js"></script>
+    <script src="Code/AI/AIController.js"></script>
+    <script src="Code/AI/Citizen.js"></script>
 
     <script src="Code/StateMachine/State.js"></script>
     <script src="Code/StateMachine/StateMachine.js"></script>
