Pistol added to the shooting animation

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -67,6 +67,7 @@
     <script src="Code/Scene/Terrain.js"></script>
     <script src="Code/Scene/Skybox.js"></script>
     <script src="Code/Scene/Environment.js"></script>
+    <script src="Code/Scene/Weapon.js"></script>
     <script src="Code/Scene/Character.js"></script>
     <script src="Code/Scene/Ammunition.js"></script>
     <script src="Code/Scene/LaserOfDeath.js"></script>
