Begginings of a Script system

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -10,13 +10,15 @@
     <nav id="ui" class="maximized">
         <p></p>
     </nav>
+    <div id="subtitles">
+        <p>THIS IS SOME LOREM IPSUM FUCK THIS FUCK DAT</p>
+    </div>
 
     <div id="crosshair"></div>
 
     <!-- External libs -->
     <script src="Scripts/implementations/three.min.js"></script>
     <script src="Scripts/implementations/jquery.documentReady.js"></script>
-    <!--<script src="Scripts/implementations/cannon.min.js"></script>-->
     <script src="Scripts/implementations/ammo.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
     <!-- Fonts -->
@@ -40,6 +42,12 @@
     <script src="Code/Algorithms/AStar.js"></script>
     <!-- /Algorithms-->
 
+    <!-- Scripted -->
+    <script src="Code/Scripted/ScriptedActions.js"></script>
+    <script src="Code/Scripted/ScriptedEvent.js"></script>
+
+    <!-- /Scripted-->
+
     <script src="Code/CharacterControllers/SkyrimCharacterController.js"></script>
     <script src="Code/AI/AIController.js"></script>
     <script src="Code/AI/Citizen.js"></script>
@@ -48,8 +56,6 @@
     <script src="Code/StateMachine/State.js"></script>
     <script src="Code/StateMachine/StateMachine.js"></script>
     <script src="Code/StateMachine/StateMachineUtils.js"></script>
-
-    <script src="Code/ThralldomMotionState.js"></script>
 
     <script src="Code/Utilities.js"></script>
     <script src="Code/GeometryUtils.js"></script>
@@ -77,7 +83,7 @@
     <script src="Code/Managers/ContentManager.js"></script>
     <!-- /Content -->
 
-    <script src="Code/application.js"></script>
-    <script src="Code/main.js"></script>
+    <script src="Code/Application.js"></script>
+    <script src="Code/Main.js"></script>
 </body>
 </html>
