Scripting system kinds works

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -45,6 +45,7 @@
     <!-- Scripted -->
     <script src="Code/Scripted/ScriptedActions.js"></script>
     <script src="Code/Scripted/ScriptedEvent.js"></script>
+    <script src="Code/Scripted/ScriptController.js"></script>
 
     <!-- /Scripted-->
 
