Content is now loaded from file. Beginnings of enhanced editor

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -16,6 +16,13 @@
 
     <div id="crosshair"></div>
 
+    <script>
+        // Predefine asm.js values, Default memory is 2^27, quadruple it!
+        //var Module = {
+        //    TOTAL_MEMORY: 1 << 29
+        //}
+    </script>
+
     <!-- External libs -->
     <script src="Scripts/implementations/three.min.js"></script>
     <script src="Scripts/implementations/jquery.documentReady.js"></script>
