--- a/Thralldom.Editor/index.html
+++ b/Thralldom.Editor/index.html
@@ -74,6 +74,7 @@
 		<script src="js/Toolbar.js"></script>
 		<script src="js/Viewport.js"></script>
 
+        <script src="js/Sidebar.Thralldom.js"></script>
         <script src="js/ThralldomSceneTracker.js"></script>
 
 		<script>
