Now with subtitles. Also renamed scene to world

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -9,10 +9,12 @@
     <main id="webGL" class="maximized"></main>
     <nav id="ui" class="maximized">
         <p></p>
+
+
+        <div id="subtitles">
+            <span>THIS IS SOME LOREM IPSUM FUCK THIS FUCK DAT</span>
+        </div>
     </nav>
-    <div id="subtitles">
-        <p>THIS IS SOME LOREM IPSUM FUCK THIS FUCK DAT</p>
-    </div>
 
     <div id="crosshair"></div>
 
@@ -22,6 +24,7 @@
     <script src="Scripts/implementations/jquery.documentReady.js"></script>
     <script src="Scripts/implementations/ammo.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
+    <script src="Scripts/implementations/subtitles.js"></script>
 
     <!-- Fonts -->
     <script src="Content/Fonts/Helvetiker.js"></script>
@@ -78,7 +81,7 @@
     <!-- Managers -->
 
     <!-- Scene -->
-    <script src="Code/Scene/Scene.js"></script>
+    <script src="Code/Scene/World.js"></script>
     <script src="Code/Objectives.js"></script>
     <script src="Code/Quest.js"></script>
     <script src="Code/FrameInfo.js"></script>
