--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -15,6 +15,14 @@
             <span></span>
         </div>
     </nav>
+    <div id="loading-screen" class="unselectable maximized">
+        <div class="centered">
+            <span id="loading-text"></span><br>
+            <progress id="loading-bar" max="100" value="0">
+            </progress>
+            <button id="play-button">Play</button>
+        </div>
+    </div>
 
     <div id="crosshair"></div>
 
