--- a/Thralldom.Web/index.html
+++ b/Thralldom.Web/index.html
@@ -1,9 +1,125 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
+
 <head>
-    <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Thralldom</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+
+    <!-- Fonts -->
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+    <!-- Custom Theme CSS -->
+    <link href="less/grayscale.css" rel="stylesheet">
+
 </head>
-<body>
-    <h1>Hi, yes, this is doge.</h1>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+                    <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" target="_blank" href="http://game.thralldom.net">
+                    <i class="fa fa-play-circle"></i>  <span class="light">Play</span> Thralldom
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+                <ul class="nav navbar-nav">
+                    <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+                    <li class="page-scroll">
+                        <a href="#page-top">Back to top</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#about">About</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#game-info">The Game</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <section class="intro">
+        <div class="intro-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h1 class="brand-heading">Thralldom</h1>
+                        <p class="intro-text">
+                            "Those willing to die in the name of the nation, ready yourselves"<br />
+                            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;- Vasil Levski, The Apostle
+
+                        </p>
+                        <div class="page-scroll">
+                            <a href="#about" class="btn btn-circle">
+                                <i class="fa fa-angle-double-down animated"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>About Thralldom</h2>
+                <p>Thralldom is a 3D game inspired by the novel 'Under the Yoke' by the Bulgarian author Ivan Vazov. It tells the story of the April Uprising of 1876, the insurrection that kick-started the bloody fight for Bulgarian indepedence.</p>
+                <p>The game runs <em><strong>entirely</strong></em> in the browser. You can play it right away by <a href="http://game.thralldom.net">clicking here</a> or at the top of the page.</p>
+                <p>Unfortunately, we only fully support Google Chrome and Mozilla Firefox. Internet Explorer (v11) is on the way.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="game-info" class="content-section text-center">
+        <div class="game-info-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>The Game</h2>
+                    <p>
+                        Look trough the eyes of Boycho Ognyanov, a revolutioner that has just escaped the heavily-guarded prison of Diarbekir as he returns to his homeland,
+                        seeking ways to overthrow the Ottoman government and finally restore the long-lost indepedence of the Bulgarian people.<br /><br />
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <hr />
+
+    <footer>
+        <ul class="horizontal">
+            <li><a href="#">TERMS OF USE</a></li>
+            <li><a href="mailto:developer@thralldom.net">CONTACT US</a></li>
+            <li class="right">ALL RIGHTS RESERVED</li>
+        </ul>
+    </footer>
+
+    <!-- Core JavaScript Files -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="js/grayscale.js"></script>
+
 </body>
+
 </html>
