Shooting, debug draw now toggable, lights dimmed out

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -80,6 +80,7 @@
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
     <script src="Code/Managers/PhysicsManager.js"></script>
+    <script src="Code/Managers/CombatManager.js"></script>
     <script src="Code/Managers/AIManager.js"></script>
     <script src="Code/Managers/AudioManager.js"></script>
     <!-- Managers -->
