(Partially) Fixed Firefox compatibility. Added (almost) working functions to toggle bounding volumes and clipping. Added some polyfills for IE, the game loads but the terrain texture won't.

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -30,6 +30,8 @@
     <script src="Scripts/implementations/ammo.small.js"></script>
     <script src="Scripts/implementations/jquery.documentReady.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
+    <!-- Polyfills!-->
+    <script src="Scripts/implementations/polyfills.js"></script>
 
 
     <!-- Fonts -->
