Text property on quest objectives. UI encapsulated in another class

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -8,7 +8,7 @@
 <body class="unselectable">
     <main id="webGL" class="maximized"></main>
     <nav id="ui" class="maximized">
-        <p></p>
+        <pre></pre>
 
 
         <div id="subtitles">
@@ -81,6 +81,7 @@
     <script src="Code/GeometryUtils.js"></script>
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
+    <script src="Code/Managers/UIManager.js"></script>
     <script src="Code/Managers/PhysicsManager.js"></script>
     <script src="Code/Managers/CombatManager.js"></script>
     <script src="Code/Managers/AIManager.js"></script>
