Pause screen added and working flawlessly

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -16,11 +16,17 @@
         </div>
     </nav>
     <div id="loading-screen" class="unselectable maximized">
-        <div class="centered">
+        <div>
             <span id="loading-text"></span><br>
             <progress id="loading-bar" max="100" value="0">
             </progress>
         </div>
+    </div>
+    <div id="paused-screen" class="unselectable maximized">
+        <h1 class="centered">
+            PAUSED<br>
+            Click anywhere to resume.
+        </h1>
     </div>
 
     <div id="crosshair"></div>
