--- a/Thralldom.Web/index.html
+++ b/Thralldom.Web/index.html
@@ -33,6 +33,9 @@
                 <a class="navbar-brand" target="_blank" href="http://game.thralldom.net">
                     <i class="fa fa-play-circle"></i>  <span class="light">Play</span> Thralldom
                 </a>
+                <a class="navbar-brand" target="_blank" href="help.html">
+                    <i class="fa fa-question-circle"></i>  <span class="light">Help</span> section
+                </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -47,6 +50,9 @@
                     </li>
                     <li class="page-scroll">
                         <a href="#game-info">The Game</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#contacts">Contact us</a>
                     </li>
                 </ul>
             </div>
@@ -102,12 +108,21 @@
         </div>
     </section>
 
+    <section id="contacts" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Contact us</h2>
+                <p>As a small team with a ton of challenges ahead of us, we absolute love feedback. If you have an idea, suggestion or just want to chat, contact us at
+                 <a href="mailto:developer@thralldom.net">developer@thralldom.net</a><p>
+            </div>
+        </div>
+    </section>
+
     <hr />
 
     <footer>
         <ul class="horizontal">
-            <li><a href="#">TERMS OF USE</a></li>
-            <li><a href="mailto:developer@thralldom.net">CONTACT US</a></li>
+            <!--<li><a href="#">TERMS OF USE</a></li>-->
             <li class="right">ALL RIGHTS RESERVED</li>
         </ul>
     </footer>
