Some mission stuff

--- a/Thralldom.Web/help.html
+++ b/Thralldom.Web/help.html
@@ -33,7 +33,7 @@
         </dd>
         <dt>How do I play?</dt>
         <dd>
-            Well, you click on the "Play" button on the home page. I assume you are too lazy to go back there, so here's a <a href="http://game.thralldom.net">direct link</a>
+            Well, you click on the "Play" button on the home page. <!--I assume you are too lazy to go back there, so here's a <a href="http://game.thralldom.net">direct link</a>-->
         </dd>
         <dt>Chuck Norris can count to forever twice while waiting for the game to load. Do something ffs!</dt>
         <dd>
