--- a/Thralldom.Web/index.html
+++ b/Thralldom.Web/index.html
@@ -17,6 +17,11 @@
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
     <!-- Custom Theme CSS -->
     <link href="less/grayscale.css" rel="stylesheet">
 
@@ -30,8 +35,8 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" target="_blank" href="http://game.thralldom.net">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Play</span> Thralldom
+                <a class="navbar-brand" target="_blank" href="why.html">
+                    <i class="fa fa-play-circle"></i>  <span class="light">See</span> why, what and how
                 </a>
                 <a class="navbar-brand" target="_blank" href="help.html">
                     <i class="fa fa-question-circle"></i>  <span class="light">Help</span> section
@@ -88,7 +93,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Thralldom</h2>
                 <p>Thralldom is a 3D game inspired by the novel 'Under the Yoke' by the Bulgarian author Ivan Vazov. It tells the story of the April Uprising of 1876, the insurrection that kick-started the bloody fight for Bulgarian indepedence.</p>
-                <p>The game runs <em><strong>entirely</strong></em> in the browser. You can play it right away by <a href="http://game.thralldom.net">clicking here</a> or at the top of the page.</p>
+                <p>The game runs <em><strong>entirely</strong></em> in the browser. <span class="hidden">You can play it right away by <a href="http://game.thralldom.net">clicking here</a> or at the top of the page.</span></p>
                 <p>Unfortunately, we only fully support Google Chrome and Mozilla Firefox. Internet Explorer (v11) is on the way.</p>
             </div>
         </div>
