Local finals version

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -76,6 +76,7 @@
     <script src="Code/AI/AIController.js"></script>
     <script src="Code/AI/Citizen.js"></script>
     <script src="Code/AI/Guard.js"></script>
+    <script src="Code/AI/Statue.js"></script>
     <!-- /Character controllers & AI -->
     <!-- State machine -->
     <script src="Code/StateMachine/State.js"></script>
