--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -48,6 +48,9 @@
     <script src="Scripts/implementations/Three.Plugins/THREE.AudioObject.js"></script>
     <script src="Scripts/implementations/subtitles.js"></script>
 
+    <!-- Web Workers-->
+    <script src="Code/Physics/SharedInterfaces.js"></script>
+
 
     <!--JS Polyfill-->
     <script src="Code/StringExtensions.js"></script>
