--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -10,7 +10,6 @@
     <nav id="ui" class="maximized">
         <pre></pre>
 
-
         <div id="subtitles">
             <span></span>
         </div>
@@ -28,6 +27,8 @@
             Click anywhere to resume.
         </h1>
     </div>
+    <!-- intro stories -->
+    <canvas id="storyline-canvas" class="fadeout maximized"></canvas>
 
     <div id="crosshair"></div>
 
@@ -115,6 +116,12 @@
     <!-- Content -->
     <script src="Code/Managers/ContentManager.js"></script>
     <!-- /Content -->
+
+    <!-- Overlay2D-->
+    <script src="Code/Overlay2D/Storyteller.js"></script>
+    <script src="Code/Overlay2D/Particle2D.js"></script>
+    <script src="Code/Overlay2D/ParticleEngine2D.js"></script>
+    <!-- /Overlay2D-->
 
     <script src="Code/Application.js"></script>
     <script src="Code/Main.js"></script>
