--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -77,6 +77,7 @@
     <!-- /Audio -->
     <!-- Character controllers & AI -->
     <script src="Code/CharacterControllers/SkyrimCharacterController.js"></script>
+    <script src="Code/CharacterControllers/FreeRoamCharacterController.js"></script>
     <script src="Code/AI/AIController.js"></script>
     <script src="Code/AI/Citizen.js"></script>
     <script src="Code/AI/Guard.js"></script>
