--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -47,6 +47,7 @@
     <!--@ThralldomCodeBegin-->
 
     <script src="Scripts/implementations/Three.Plugins/THREE.AudioObject.js"></script>
+    <script src="Scripts/implementations/Three.Plugins/THREE.ParticleEngine.js"></script>
     <script src="Scripts/implementations/subtitles.js"></script>
 
     <!-- Web Workers-->
@@ -99,6 +100,7 @@
     <script src="Code/Managers/CombatManager.js"></script>
     <script src="Code/Managers/ControllerManager.js"></script>
     <script src="Code/Managers/AudioManager.js"></script>
+    <script src="Code/Managers/ParticleManager.js"></script>
     <!-- Managers -->
     <!-- Scene -->
     <script src="Code/Scene/World.js"></script>
