Some support for postprocessing effects

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -48,6 +48,7 @@
 
     <script src="Scripts/implementations/Three.Plugins/THREE.AudioObject.js"></script>
     <script src="Scripts/implementations/Three.Plugins/THREE.ParticleEngine.js"></script>
+    <script src="Scripts/implementations/Three.Plugins/THREE.Postprocessing.min.js"></script>
     <script src="Scripts/implementations/subtitles.js"></script>
 
     <!-- Web Workers-->
