--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -69,7 +69,7 @@
     <div id="crosshair"></div>
 
     <!-- External libs -->
-    <script src="Scripts/implementations/three.js"></script>
+    <script src="Scripts/implementations/three.min.js"></script>
     <script src="Scripts/implementations/ammo.small.js"></script>
     <script src="Scripts/implementations/jquery.documentReady.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
