--- a/ProjectThralldom/outdated.html
+++ b/ProjectThralldom/outdated.html
@@ -94,7 +94,6 @@
 
         .iexplorer {
             background-image: url("Images/Outdated/iexplorer.png");
-            display: none !important;
         }
 
         .opera {
@@ -114,7 +113,8 @@
         <p>
             You are using an outdated or unsupported browser. <span id="current-browser"></span><br>
             Unfortunately, you can't play <span class="big">Thralldom</span> if you don't upgrade. <br>
-            Currently, we only support Google Chrome and Mozilla Firefox. <br />
+            Currently, we only fully support Google Chrome. The game is playable in Internet Explorer and Mozilla Firefox
+            but lacks some features.<br />
             Sorry for the inconvenience.
             Click any of the links below to install your new browser (or update your current one). <br>
         </p>
