--- a/Thralldom.Web/help.html
+++ b/Thralldom.Web/help.html
@@ -28,12 +28,11 @@
             We haven't gathered enough test data to provide you with precise system requirements but you should be fine with every machine running a
             moderately powerful CPU / GPU.
             We have software requirements though. You need to make sure that you have your latest video card drivers installed.
-            Also, we currently only support Google Chrome and Mozilla Firefox (make sure they're updated!). Support for Internet Explorer 11 is on the way,
-            we only miss a few things before sending it your way. We make no plans for supporting neither Opera nor Safari at the moment.
+            Also, we currently only support Internet Explorer 11, Google Chrome and Mozilla Firefox (make sure they're updated!). We make no plans for supporting neither Opera nor Safari at the moment.
         </dd>
         <dt>How do I play?</dt>
         <dd>
-            Well, you click on the "Play" button on the home page. <!--I assume you are too lazy to go back there, so here's a <a href="http://game.thralldom.net">direct link</a>-->
+            Well, you click on the "Play" button on the home page. I assume you are too lazy to go back there, so here's a <a href="http://game.thralldom.net">direct link</a>
         </dd>
         <dt>Chuck Norris can count to forever twice while waiting for the game to load. Do something ffs!</dt>
         <dd>
