--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -35,22 +35,22 @@
         <nav id="graphics" class="fadeout unselectable">
             <ul>
                 <!--<li>
-                <label for="view-distance">View distance</label>
-                <input id="view-distance" type="range" min="0" max="10000" value="10000" />
-            </li>-->
+                    <label for="view-distance">View distance</label>
+                    <input id="view-distance" type="range" min="0" max="10000" value="10000" />
+                </li>-->
                 <li>
                     <label for="enable-particles">Enable Particles?</label>
                     <input id="enable-particles" type="checkbox" />
                 </li>
                 <!--<li>
-                <label for="shadow-quality">Shadow quality?</label>
-                <select form="shadow-quality">
-                    <option value="Off">Off</option>
-                    <option value="Static">Static</option>
-                    <option value="Dynamic">Dynamic</option>
-                    <option value="Soft">Dynamic & Soft</option>
-                </select>
-            </li>-->
+                    <label for="shadow-quality">Shadow quality?</label>
+                    <select form="shadow-quality">
+                        <option value="Off">Off</option>
+                        <option value="Static">Static</option>
+                        <option value="Dynamic">Dynamic</option>
+                        <option value="Soft">Dynamic & Soft</option>
+                    </select>
+                </li>-->
                 <li class="main-menu-return">Main menu</li>
             </ul>
         </nav>
@@ -69,15 +69,16 @@
 
     <div id="crosshair"></div>
 
-    <!-- External libs -->
-    <script src="http://ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.1.3.js"></script>
+
+    <!--@ThralldomDependenciesBegin-->
+    <script src="Scripts/implementations/MobileServices.Web-1.1.3.min.js"></script>
     <script src="Scripts/implementations/three.min.js"></script>
     <script src="Scripts/implementations/ammo.small.js"></script>
     <script src="Scripts/implementations/jquery.documentReady.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
     <!-- Polyfills!-->
     <script src="Scripts/implementations/polyfills.js"></script>
-
+    <!--@ThralldomDependenciesEnd-->
 
     <!-- Fonts -->
     <script src="Content/Fonts/Helvetiker.js"></script>
