--- a/Thralldom.Web/index.html
+++ b/Thralldom.Web/index.html
@@ -94,7 +94,7 @@
                 <h2>About Thralldom</h2>
                 <p>Thralldom is a 3D game inspired by the novel 'Under the Yoke' by the Bulgarian author Ivan Vazov. It tells the story of the April Uprising of 1876, the insurrection that kick-started the bloody fight for Bulgarian indepedence.</p>
                 <p>The game runs <em><strong>entirely</strong></em> in the browser. <span class="hidden">You can play it right away by <a href="http://game.thralldom.net">clicking here</a> or at the top of the page.</span></p>
-                <p>Unfortunately, we only support Internet Explorer 11, Google Chrome and Mozilla Firefox. </p>
+                <p>Currently, we support Internet Explorer 11, Google Chrome and Mozilla Firefox. </p>
             </div>
         </div>
     </section>
