--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -72,19 +72,19 @@
 
     <!--@ThralldomDependenciesBegin-->
     <script src="Scripts/implementations/MobileServices.Web-1.1.3.min.js"></script>
-    <script src="Scripts/implementations/three.js"></script>
-    <script src="Scripts/implementations/ammo.small.js"></script>
+    <script src="Scripts/implementations/three.min.js"></script>
     <script src="Scripts/implementations/jquery.documentReady.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
+    <!--@ThralldomDependenciesEnd-->
+
     <!-- Polyfills!-->
     <script src="Scripts/implementations/polyfills.js"></script>
-    <!--@ThralldomDependenciesEnd-->
 
     <!-- Fonts -->
     <script src="Content/Fonts/Helvetiker.js"></script>
     <!-- /Fonts-->
     <!--@ThralldomCodeBegin-->
-
+    
     <script src="Scripts/implementations/Three.Plugins/THREE.AudioObject.js"></script>
     <script src="Scripts/implementations/Three.Plugins/THREE.ParticleEngine.js"></script>
     <script src="Scripts/implementations/Three.Plugins/THREE.Postprocessing.min.js"></script>
