--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -7,7 +7,7 @@
 </head>
 <body class="unselectable">
     <main id="webGL" class="maximized"></main>
-    <nav id="ui" class="maximized">
+    <nav id="hud" class="maximized">
         <pre></pre>
 
         <div id="subtitles">
@@ -23,46 +23,34 @@
     </div>
     <div id="paused-screen" class="unselectable maximized">
         <h1 id="resume-button">RESUME</h1>
-        <nav id="main" class="fadein unselectable">
-            <ul>
-                <li>Graphics Options</li>
-                <li>Sound Options</li>
-                <li>Help page</li>
-                <li id="azure">Configure MS Account</li>
-                <li>Back to Home Page</li>
+        <nav id="main" class="fadein unselectable" data-bind="attr: { 'data-content': getGreeting }">
+            <ul data-bind="foreach: settings">
+                <li data-bind="text: name"></li>
+                <!-- ko if: ($index() === $parent.settings.length - 1) -->
+                    <li>Help page</li>
+                    <li id="azure">Configure MS Account</li>
+                    <li>Back to Home Page</li>
+                <!-- /ko -->
             </ul>
         </nav>
-        <nav id="graphics" class="fadeout unselectable">
-            <ul>
-                <!--<li>
-                    <label for="view-distance">View distance</label>
-                    <input id="view-distance" type="range" min="0" max="10000" value="10000" />
-                </li>-->
-                <li>
-                    <label for="enable-particles">Enable Particles?</label>
-                    <input id="enable-particles" type="checkbox" />
-                </li>
-                <!--<li>
-                    <label for="shadow-quality">Shadow quality?</label>
-                    <select form="shadow-quality">
-                        <option value="Off">Off</option>
-                        <option value="Static">Static</option>
-                        <option value="Dynamic">Dynamic</option>
-                        <option value="Soft">Dynamic & Soft</option>
-                    </select>
-                </li>-->
-                <li class="main-menu-return">Main menu</li>
-            </ul>
-        </nav>
-        <nav id="audio" class="fadeout unselectable">
-            <ul>
-                <li>
-                    <label for="master-volume">Master volume</label>
-                    <input id="master-volume" type="range" min="0" max="100" value="100" />
-                </li>
-                <li class="main-menu-return">Main menu</li>
-            </ul>
-        </nav>
+        <!-- ko foreach: settings -->
+            <nav data-bind="attr: { id: id}" class="fadeout unselectable">
+                <ul data-bind="foreach: options">
+                    <li>
+                        <label data-bind="attr: { for: id }, text: name"></label>
+                        <!-- ko if: $data.value !== undefined -->
+                        <input data-bind="value: value, attr: { id: id, type: inputType }, event: { change: onchange }" min="0" max="100" />
+                        <!-- /ko -->
+                        <!-- ko if: $data.checked !== undefined -->
+                        <input data-bind="checked: checked, attr: { id: id, type: inputType }, event: { change: onchange }" min="0" max="100" />
+                        <!-- /ko -->
+                    </li>
+                    <!-- ko if: ($index() === $parent.options.length - 1) -->
+                    <li class="main-menu-return">Main menu</li>
+                    <!-- /ko -->
+                </ul>
+            </nav>
+        <!-- /ko -->
     </div>
     <!-- intro stories -->
     <canvas id="storyline-canvas" class="fadeout maximized"></canvas>
@@ -74,6 +62,7 @@
     <script src="Scripts/implementations/MobileServices.Web-1.1.3.min.js"></script>
     <script src="Scripts/implementations/three.js"></script>
     <script src="Scripts/implementations/jquery.documentReady.js"></script>
+    <script src="Scripts/implementations/knockout-3.1.0.js"></script>
     <script src="Scripts/implementations/stats.min.js"></script>
     <!--@ThralldomDependenciesEnd-->
 
@@ -131,10 +120,11 @@
     <script src="Code/StateMachine/StateMachineUtils.js"></script>
     <!-- /State machine -->
     <!-- Managers -->
-    <script src="Code/Utilities.js"></script>
+    <script src="Code/Utils.js"></script>
     <script src="Code/GeometryUtils.js"></script>
     <script src="Code/Managers/MouseData.js"></script>
     <script src="Code/Managers/InputManager.js"></script>
+    <script src="Code/Managers/Viewmodel.js"></script>
     <script src="Code/Managers/UIManager.js"></script>
     <script src="Code/Managers/PhysicsManager.js"></script>
     <script src="Code/Managers/CombatManager.js"></script>
