Implemented alert system.

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -19,6 +19,14 @@
         <div id="subtitles">
             <span></span>
         </div>
+
+        <div id="alerts">
+            <ul>
+                <li style="display:none"></li>
+                <li style="display:none"></li>
+                <li style="display:none"></li>
+            </ul>
+        </div>
     </nav>
     <div id="loading-screen" class="unselectable maximized">
         <div>
@@ -173,6 +181,7 @@
     <!-- /Content -->
     <!-- Overlay2D-->
     <script src="Code/Overlay2D/Storyteller.js"></script>
+    <script src="Code/Overlay2D/Alert.js"></script>
     <script src="Code/Overlay2D/Particle2D.js"></script>
     <script src="Code/Overlay2D/ParticleEngine2D.js"></script>
     <!-- /Overlay2D-->
