Refactored script parsing. Refactored quests and scripts subsystems. Added a GatherObjective and a sample scene. Moved several array utilities as extensions.

--- a/ProjectThralldom/default.htm
+++ b/ProjectThralldom/default.htm
@@ -111,7 +111,7 @@
 
 
     <!--JS Polyfill-->
-    <script src="Code/StringExtensions.js"></script>
+    <script src="Code/Extensions.js"></script>
 
     <!-- Ours -->
     <!-- Constants -->
@@ -155,6 +155,8 @@
     <script src="Code/Managers/UIManager.js"></script>
     <script src="Code/Managers/PhysicsManager.js"></script>
     <script src="Code/Managers/CombatManager.js"></script>
+    <script src="Code/Managers/QuestManager.js"></script>
+    <script src="Code/Managers/ScriptManager.js"></script>
     <script src="Code/Managers/ControllerManager.js"></script>
     <script src="Code/Managers/AudioManager.js"></script>
     <script src="Code/Managers/ParticleManager.js"></script>
@@ -169,6 +171,7 @@
     <script src="Code/Scene/DynamicObject.js"></script>
     <script src="Code/Scene/Terrain.js"></script>
     <script src="Code/Scene/Skybox.js"></script>
+    <script src="Code/Scene/Interaction.js"></script>
     <script src="Code/Scene/Environment.js"></script>
     <script src="Code/Scene/Weapon.js"></script>
     <script src="Code/Scene/Inventory.js"></script>
