--- a/Thralldom.Editor/index.html
+++ b/Thralldom.Editor/index.html
@@ -38,6 +38,7 @@
     <script src="../examples/js/exporters/BufferGeometryExporter.js"></script>
     <script src="../examples/js/exporters/TypedGeometryExporter.js"></script>
     <script src="../examples/js/exporters/GeometryExporter.js"></script>
+    <script src="../examples/js/exporters/Geometry2Exporter.js"></script>
     <script src="../examples/js/exporters/MaterialExporter.js"></script>
     <script src="../examples/js/exporters/ObjectExporter.js"></script>
     <script src="../examples/js/renderers/WebGLRenderer3.js"></script>
@@ -79,7 +80,8 @@
     <script src="js/Viewport.js"></script>
 
     <script src="js/Sidebar.Thralldom.js"></script>
-    <script src="js/ThralldomSceneTracker.js"></script>
+    <script src="js/Sidebar.ThralldomGlobal.js"></script>
+    <script src="js/Thralldom.Exporter.js"></script>
 
     <script>
 
